--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>About Us - Travel Sri Lanka</title>
     <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
@@ -8,107 +9,109 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widthdevice-width, initial-scale=1,0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
-<div class="container-fluid">
-    <div class="header">
-        <div class="wrap">
-            <div class="logo">
-                <a href="index.html">
-                    <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
-                </a>
-            </div>
-            <div class="top-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="places.html">Where To Go</a></li>
-                    <li><a href="hotels.html">Hotels</a></li>
-                    <li><a href="Events.html">Cultural Festivals</a></li>
-                    <li><a href="news.html">Tousrism News</a></li>
-                    <li class="active"><a href="about.html">About Us</a></li>
-                </ul>
-            </div>
-
-            <div class="clear"></div>
-        </div>
-    </div>
-    <br>
-    <div class="container"
-         style="height:100%; background-image: url('Assets/Favicon.png'); background-repeat: no-repeat; background-position: right bottom">
-        <div class="para">
-            <h1>About Us</h1>
-            <!--    <div class="parallax"></div>-->
-            <div class="row" id="about">
-                <b>Travel Sri Lanka</b> is Sri Lankan Tourism Website. The main purpose of the website is to improve
-                tourism
-                Industry in Sri Lanka. In the same manner anyone with access to the website can update the latest news
-                in
-                tourism industry in Sri Lanka.
-                <br> <br>
-                Content posted on <b>Travel Sri Lanka</b> is carefully curated and sourced from the Internet, including
-                other tourism industry news websites and even local news are also being posted.
-            </div>
-            <br>
-
-            <!--    <div class="parallax"></div>-->
-        </div>
-    </div>
-</div>
-<br> <br>
-
-<br><br>
-<footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
-    <br>
-    <div class="row">
-        <div class="col-2" style="text-align: right">
-            <img src="Assets/Favicon.png" style="height: auto; width: 40%">
-        </div>
-        <div class="col-6" style="text-align: left">
-            <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
-        </div>
-        <div class="col-4">
-            <div class="row">
-                <div class="col-4" style="text-align: left">
-                    <ul class="footer-links">
-                        <li><a href="index.html" id="footerlink">Home</a></li>
-                        <li><a href="places.html" id="footerlink">Where To Go</a></li>
-                        <li><a href="hotels.html" id="footerlink">Hotels</a></li>
+    <div class="container-fluid">
+        <div class="header">
+            <div class="wrap">
+                <div class="logo">
+                    <a href="index.html">
+                        <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
+                    </a>
+                </div>
+                <div class="top-nav">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="places.html">Where To Go</a></li>
+                        <li><a href="hotels.html">Hotels</a></li>
+                        <li><a href="Events.html">Cultural Festivals</a></li>
+                        <li><a href="news.html">Tousrism News</a></li>
+                        <li class="active"><a href="about.html">About Us</a></li>
                     </ul>
                 </div>
 
-                <div class="col-4" style="text-align: left">
-                    <ul class="footer-links">
-                        <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
-                        <li><a href="news.html" id="footerlink">Tousrism News</a></li>
-                        <li><a href="about.html" id="footerlink">About Us</a></li>
-                    </ul>
+                <div class="clear"></div>
+            </div>
+        </div>
+        <br>
+        <div class="container"
+            style="height:100%; background-image: url('Assets/Favicon.png'); background-repeat: no-repeat; background-position: right bottom">
+            <div class="para">
+                <h1>About Us</h1>
+                <!--    <div class="parallax"></div>-->
+                <div class="row" id="about">
+                    <b>Travel Sri Lanka</b> is Sri Lankan Tourism Website. The main purpose of the website is to improve
+                    tourism
+                    Industry in Sri Lanka. In the same manner anyone with access to the website can update the latest
+                    news
+                    in
+                    tourism industry in Sri Lanka.
+                    <br> <br>
+                    Content posted on <b>Travel Sri Lanka</b> is carefully curated and sourced from the Internet,
+                    including
+                    other tourism industry news websites and even local news are also being posted.
+                </div>
+                <br>
+
+                <!--    <div class="parallax"></div>-->
+            </div>
+        </div>
+    </div>
+    <br> <br>
+
+    <br><br>
+    <footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
+        <br>
+        <div class="row">
+            <div class="col-2" style="text-align: right">
+                <img src="Assets/Favicon.png" style="height: auto; width: 40%">
+            </div>
+            <div class="col-6" style="text-align: left">
+                <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
+            </div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col-4" style="text-align: left">
+                        <ul class="footer-links">
+                            <li><a href="index.html" id="footerlink">Home</a></li>
+                            <li><a href="places.html" id="footerlink">Where To Go</a></li>
+                            <li><a href="hotels.html" id="footerlink">Hotels</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-4" style="text-align: left">
+                        <ul class="footer-links">
+                            <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
+                            <li><a href="news.html" id="footerlink">Tousrism News</a></li>
+                            <li><a href="about.html" id="footerlink">About Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <br>
+                <div class="row" style="text-align: right;">
+                    <img src="Assets/social/facebook.png" id="footericon">
+                    <img src="Assets/social/whatsapp.png" id="footericon">
+                    <img src="Assets/social/instagram.png" id="footericon">
+                    <img src="Assets/social/twitter.png" id="footericon">
+                    <img src="Assets/social/youtube.png" id="footericon">
+
                 </div>
             </div>
-            <br>
-            <div class="row" style="text-align: right;">
-                <img src="Assets/social/facebook.png" id="footericon">
-                <img src="Assets/social/whatsapp.png" id="footericon">
-                <img src="Assets/social/instagram.png" id="footericon">
-                <img src="Assets/social/twitter.png" id="footericon">
-                <img src="Assets/social/youtube.png" id="footericon">
 
+
+        </div>
+        <hr style="color: white">
+        <div class="row">
+            <div class="col-12" style="text-align: center">
+                <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
+                    <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
+                </p>
             </div>
         </div>
-
-
-    </div>
-    <hr style="color: white">
-    <div class="row">
-        <div class="col-12" style="text-align: center">
-            <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
-                <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
-            </p>
-        </div>
-    </div>
-</footer>
+    </footer>
 </body>
 
 
