--- a/hotels.html
+++ b/hotels.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>Hotels - Travel Sri Lanka</title>
     <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
@@ -8,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widthdevice-width, initial-scale=1,0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <style>
         div.gallery {
             border: 1px solid #ccc;
@@ -73,139 +74,145 @@
 <body>
 
 
-<div class="container-fluid">
-    <div class="header">
-        <div class="wrap">
-            <div class="logo">
-                <a href="index.html">
-                    <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
-                </a>
-            </div>
-            <div class="top-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="places.html">Where To Go</a></li>
-                    <li class="active"><a href="hotels.html">Hotels</a></li>
-                    <li><a href="Events.html">Cultural Festivals</a></li>
-                    <li><a href="news.html">Tousrism News</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </div>
-
-            <div class="clear"></div>
-        </div>
-    </div>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">360 City View</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/places/1-1.jpg"  style="width:200px;height:150px">
-                        <img src="./Assets/places/1-2.jpg"  style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="location.href='https://www.booking.com/hotel/lk/360-city-view-badulla123.en-gb.html?label=lk-OUKc3yVPWKJQsrx8G42m6wS379618122174%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-298284775350%3Alp1009919%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YfpWGnRw6lOGgfEoJVv7zYo&sid=b8749340e0c598efc552f7001fefd60c&aid=1610687&ucfs=1&arphpl=1&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=1&hapos=1&sr_order=popularity&srpvid=5eb27db1dfdb01ac&srepoch=1646761956&from=searchresults#hotelTmpl'" class="btn btn-primary" id="viewmore">Book
-                        </button>
-                    </div>
+    <div class="container-fluid">
+        <div class="header">
+            <div class="wrap">
+                <div class="logo">
+                    <a href="index.html">
+                        <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
+                    </a>
                 </div>
-            </div>
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Sigiriya Kingdom Gate Dambulla</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/places/2-1.jpg" style="width:200px;height:150px">
-                        <img src="./Assets/places/2-2.jpg" style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="location.href='https://www.booking.com/hotel/lk/sigiriya-kingdom-gate-dambulla.en-gb.html?label=lk-OUKc3yVPWKJQsrx8G42m6wS379618122174%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-298284775350%3Alp1009919%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YfpWGnRw6lOGgfEoJVv7zYo&sid=b8749340e0c598efc552f7001fefd60c&aid=1610687&ucfs=1&arphpl=1&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=2&hapos=2&sr_order=popularity&srpvid=83f67dd435fe016e&srepoch=1646762025&from=searchresults#hotelTmpl'" class="btn btn-primary" id="viewmore">Book
-                        </button>
-                    </div>
+                <div class="top-nav">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="places.html">Where To Go</a></li>
+                        <li class="active"><a href="hotels.html">Hotels</a></li>
+                        <li><a href="Events.html">Cultural Festivals</a></li>
+                        <li><a href="news.html">Tousrism News</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                    </ul>
                 </div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-3">
 
+                <div class="clear"></div>
             </div>
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Mountain Villa Adam's Peak</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/places/3-1.jpg"  style="width:200px;height:150px">
-                        <img src="./Assets/places/3-2.jpg"  style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="location.href='https://www.booking.com/hotel/lk/mountain-villa-adam-39-s-peak.en-gb.html?aid=1610687;label=lk-OUKc3yVPWKJQsrx8G42m6wS379618122174%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-298284775350%3Alp1009919%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YfpWGnRw6lOGgfEoJVv7zYo;sid=b8749340e0c598efc552f7001fefd60c;dest_id=900059439;dest_type=landmark;dist=0;group_adults=2;group_children=0;hapos=3;hpos=3;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1646761653;srpvid=e7ee7d19b04a01ec;type=total;ucfs=1&#hotelTmpl'" class="btn btn-primary" id="viewmore">Book
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
+        </div>
 
-            </div>
-        </div>
-        <br>
-    </div>
 
-</div>
-<br><br>
-<footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
-    <br>
-    <div class="row">
-        <div class="col-2" style="text-align: right">
-            <img src="Assets/Favicon.png" style="height: auto; width: 40%">
-        </div>
-        <div class="col-6" style="text-align: left">
-            <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
-        </div>
-        <div class="col-4">
+        <div class="container">
             <div class="row">
-                <div class="col-4" style="text-align: left">
-                    <ul class="footer-links">
-                        <li><a href="index.html" id="footerlink">Home</a></li>
-                        <li><a href="places.html" id="footerlink">Where To Go</a></li>
-                        <li><a href="hotels.html" id="footerlink">Hotels</a></li>
-                    </ul>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">360 City View</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/places/1-1.jpg" style="width:200px;height:150px">
+                            <img src="./Assets/places/1-2.jpg" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button"
+                                onclick="location.href='https://www.booking.com/hotel/lk/360-city-view-badulla123.en-gb.html?label=lk-OUKc3yVPWKJQsrx8G42m6wS379618122174%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-298284775350%3Alp1009919%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YfpWGnRw6lOGgfEoJVv7zYo&sid=b8749340e0c598efc552f7001fefd60c&aid=1610687&ucfs=1&arphpl=1&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=1&hapos=1&sr_order=popularity&srpvid=5eb27db1dfdb01ac&srepoch=1646761956&from=searchresults#hotelTmpl'"
+                                class="btn btn-primary" id="viewmore">Book
+                            </button>
+                        </div>
+                    </div>
                 </div>
-
-                <div class="col-4" style="text-align: left">
-                    <ul class="footer-links">
-                        <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
-                        <li><a href="news.html" id="footerlink">Tousrism News</a></li>
-                        <li><a href="about.html" id="footerlink">About Us</a></li>
-                    </ul>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Sigiriya Kingdom Gate Dambulla</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/places/2-1.jpg" style="width:200px;height:150px">
+                            <img src="./Assets/places/2-2.jpg" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button"
+                                onclick="location.href='https://www.booking.com/hotel/lk/sigiriya-kingdom-gate-dambulla.en-gb.html?label=lk-OUKc3yVPWKJQsrx8G42m6wS379618122174%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-298284775350%3Alp1009919%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YfpWGnRw6lOGgfEoJVv7zYo&sid=b8749340e0c598efc552f7001fefd60c&aid=1610687&ucfs=1&arphpl=1&group_adults=2&req_adults=2&no_rooms=1&group_children=0&req_children=0&hpos=2&hapos=2&sr_order=popularity&srpvid=83f67dd435fe016e&srepoch=1646762025&from=searchresults#hotelTmpl'"
+                                class="btn btn-primary" id="viewmore">Book
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <br>
-            <div class="row" style="text-align: right;">
-                <img src="Assets/social/facebook.png" id="footericon">
-                <img src="Assets/social/whatsapp.png" id="footericon">
-                <img src="Assets/social/instagram.png" id="footericon">
-                <img src="Assets/social/twitter.png" id="footericon">
-                <img src="Assets/social/youtube.png" id="footericon">
+            <div class="row">
+                <div class="col-3">
 
+                </div>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Mountain Villa Adam's Peak</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/places/3-1.jpg" style="width:200px;height:150px">
+                            <img src="./Assets/places/3-2.jpg" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button"
+                                onclick="location.href='https://www.booking.com/hotel/lk/mountain-villa-adam-39-s-peak.en-gb.html?aid=1610687;label=lk-OUKc3yVPWKJQsrx8G42m6wS379618122174%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-298284775350%3Alp1009919%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YfpWGnRw6lOGgfEoJVv7zYo;sid=b8749340e0c598efc552f7001fefd60c;dest_id=900059439;dest_type=landmark;dist=0;group_adults=2;group_children=0;hapos=3;hpos=3;no_rooms=1;req_adults=2;req_children=0;room1=A%2CA;sb_price_type=total;sr_order=popularity;srepoch=1646761653;srpvid=e7ee7d19b04a01ec;type=total;ucfs=1&#hotelTmpl'"
+                                class="btn btn-primary" id="viewmore">Book
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+
+                </div>
+            </div>
+            <br>
+        </div>
+
+    </div>
+    <br><br>
+    <footer class="site-footer" style="background-color: #343a40; padding-top: 0px; padding-bottom: 0px;">
+        <br>
+        <div class="row">
+            <div class="col-2" style="text-align: right">
+                <img src="Assets/Favicon.png" style="height: auto; width: 40%">
+            </div>
+            <div class="col-6" style="text-align: left">
+                <h3 style="font-family: Lobster; font-size: 60px; color: #00B895;">Travel Sri Lanka</h3>
+            </div>
+            <div class="col-4">
+                <div class="row">
+                    <div class="col-4" style="text-align: left">
+                        <ul class="footer-links">
+                            <li><a href="index.html" id="footerlink">Home</a></li>
+                            <li><a href="places.html" id="footerlink">Where To Go</a></li>
+                            <li><a href="hotels.html" id="footerlink">Hotels</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-4" style="text-align: left">
+                        <ul class="footer-links">
+                            <li><a href="Events.html" id="footerlink">Cultural Festivals</a></li>
+                            <li><a href="news.html" id="footerlink">Tousrism News</a></li>
+                            <li><a href="about.html" id="footerlink">About Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <br>
+                <div class="row" style="text-align: right;">
+                    <img src="Assets/social/facebook.png" id="footericon">
+                    <img src="Assets/social/whatsapp.png" id="footericon">
+                    <img src="Assets/social/instagram.png" id="footericon">
+                    <img src="Assets/social/twitter.png" id="footericon">
+                    <img src="Assets/social/youtube.png" id="footericon">
+
+                </div>
             </div>
         </div>
-    </div>
-    <hr style="color: white">
-    <div class="row">
-        <div class="col-12" style="text-align: center">
-            <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
-                <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
-            </p>
+        <hr style="color: white">
+        <div class="row">
+            <div class="col-12" style="text-align: center">
+                <p class="copyright-text" id="footerlink">Copyright &copy; 2022 All Rights Reserved by
+                    <a href="index.html" id="footerlink">Travel Sri Lanka</a>.
+                </p>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 </body>
 
