--- a/places.html
+++ b/places.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <title>Where To Go - Travel Sri Lanka</title>
     <link rel="icon" type="image/x-icon" href="Assets/Favicon.png">
@@ -8,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="widthdevice-width, initial-scale=1,0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <style>
         div.gallery {
             border: 1px solid #ccc;
@@ -73,152 +74,160 @@
 <body onload="loading()">
 
 
-<div class="container-fluid">
-    <div class="header">
-        <div class="wrap">
-            <div class="logo">
-                <a href="index.html">
-                    <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
-                </a>
-            </div>
-            <div class="top-nav">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li class="active"><a href="places.html">Where To Go</a></li>
-                    <li><a href="hotels.html">Hotels</a></li>
-                    <li><a href="Events.html">Cultural Festivals</a></li>
-                    <li><a href="news.html">Tousrism News</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                </ul>
-            </div>
+    <div class="container-fluid">
+        <div class="header">
+            <div class="wrap">
+                <div class="logo">
+                    <a href="index.html">
+                        <b>Travel<Br>&ensp;<font style="color:aqua">Sri Lanka</font></b>
+                    </a>
+                </div>
+                <div class="top-nav">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><a href="places.html">Where To Go</a></li>
+                        <li><a href="hotels.html">Hotels</a></li>
+                        <li><a href="Events.html">Cultural Festivals</a></li>
+                        <li><a href="news.html">Tousrism News</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                    </ul>
+                </div>
 
-            <div class="clear"></div>
+                <div class="clear"></div>
+            </div>
         </div>
+
+
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Adams Peak</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/adams-peak.jpg" alt="Adams Peak" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(1)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Bundala National Park</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/Bundala-1.jpg" alt="Bundala National Park"
+                                style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(2)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Dambulla CaveTemple</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/Dambulla%20temple.jpg" alt="Dambulla CaveTemple"
+                                style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(3)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Delft Temple</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/Delft_Temple.jpg" alt="Adams Peak" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(4)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Diyaluma Falls</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/Diyaluma%20falls.jpg" alt="Adams Peak" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(5)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Rawana Ella and Rawana Falls</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/Rawana%20flls.jpg" alt="Rawana Ella and Rawana Falls"
+                                style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(6)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-3">
+
+                </div>
+                <div class="col-6">
+                    <div class="card text-center">
+                        <div class="card-header">
+                            <h5 class="card-title">Ridee Viharaya</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="./Assets/Ridee%20viharaya.jpg" alt="Adams Peak" style="width:200px;height:150px">
+                        </div>
+                        <div class="card-footer text-muted">
+                            <button type="button" onclick="view_modal(7)" class="btn btn-primary" id="viewmore">View
+                                More
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+
+                </div>
+            </div>
+            <br>
+        </div>
+
     </div>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Adams Peak</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/adams-peak.jpg" alt="Adams Peak" style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(1)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Bundala National Park</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/Bundala-1.jpg" alt="Bundala National Park" style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(2)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Dambulla CaveTemple</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/Dambulla%20temple.jpg" alt="Dambulla CaveTemple"
-                             style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(3)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Delft Temple</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/Delft_Temple.jpg" alt="Adams Peak" style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(4)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Diyaluma Falls</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/Diyaluma%20falls.jpg" alt="Adams Peak" style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(5)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Rawana Ella and Rawana Falls</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/Rawana%20flls.jpg" alt="Rawana Ella and Rawana Falls"
-                             style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(6)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-3">
-
-            </div>
-            <div class="col-6">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <h5 class="card-title">Ridee Viharaya</h5>
-                    </div>
-                    <div class="card-body">
-                        <img src="./Assets/Ridee%20viharaya.jpg" alt="Adams Peak" style="width:200px;height:150px">
-                    </div>
-                    <div class="card-footer text-muted">
-                        <button type="button" onclick="view_modal(7)" class="btn btn-primary" id="viewmore">View More
-                        </button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-3">
-
-            </div>
-        </div>
-        <br>
-    </div>
-
-</div>
 
 
 </body>
@@ -262,13 +271,13 @@
                     busy time to climb.<br><br>
                     Most people starting this journey Dalhousie call nallathanni. nallathanni is 3 hours from
                     hatton.<br><br>
-                <li>Buses- In peak season might be two direct buses from kandy. Otherwise exists local bus from
-                    Hatton. You might be required to change bus in Maskeliya (after around 1.5 hours).
-                </li>
-                <li>Train- The nearest train station is Hatton. Then switch to bus, taxi, tuktuk.</li>
-                <li>Taxi- Depending on your negotiation skills, a taxi (7 seats) around LKR2000-3000.</li>
-                <li>TukTuk- Depending on your negotiation skills. Around LKR600.
-                    </p>
+                    <li>Buses- In peak season might be two direct buses from kandy. Otherwise exists local bus from
+                        Hatton. You might be required to change bus in Maskeliya (after around 1.5 hours).
+                    </li>
+                    <li>Train- The nearest train station is Hatton. Then switch to bus, taxi, tuktuk.</li>
+                    <li>Taxi- Depending on your negotiation skills, a taxi (7 seats) around LKR2000-3000.</li>
+                    <li>TukTuk- Depending on your negotiation skills. Around LKR600.
+                </p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
@@ -546,4 +555,5 @@
 
     }
 </script>
+
 </html>
